--- a/app/src/main/res/layout/operations_list_activity.xml
+++ b/app/src/main/res/layout/operations_list_activity.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_grey"
@@ -106,7 +107,7 @@
         android:background="@color/colorPrimary"
         android:weightSum="1">
 
-        <com.enstrapp.fieldtekpro.customfont.Font_Button
+        <Button
             android:id="@+id/cancel_button"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -123,7 +124,7 @@
             android:gravity="center"
             android:background="@color/white" />
 
-        <com.enstrapp.fieldtekpro.customfont.Font_Button
+        <Button
             android:id="@+id/send_button"
             android:layout_width="0dp"
             android:layout_height="match_parent"
